🍳 fix: flipwords overflow responsive on mobile (#33)

--- a/src/components/HomepageHero/SetupHero.module.scss
+++ b/src/components/HomepageHero/SetupHero.module.scss
@@ -88,7 +88,6 @@
 }
 
 .subtitle {
-  overflow: hidden;
   margin-top: 1.25em;
   font-size: 1.3rem;
   font-size: min(1.3rem, max(3.5vw, 1.1rem));
